# django-statuswatch

./: .bandit  .copilotignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  docker-compose.mod.yml  docker-compose.override.yml  docker-compose.production.yml  eslint.config.js  nginx-dev.conf  package-lock.json  pyproject.toml  pytest.ini  sentry_diagnostic.sh  venv_diagnostic.sh
.github/: copilot-instructions.md
.github/deployment/: Caddyfile.ondemand  DEPLOYMENT_CHECKLIST.md  DOCKER_COMPOSE_EXPLAINED.md  EC2_DEPLOYMENT_GUIDE.md  FIX_HTTP_REDIRECT.md  ONDEMAND_TLS_DEPLOY.md  docker-compose.override.yml  docker-compose.production.yml  test_http_access.sh  test_ondemand_setup.sh
.github/docs/: 1_registration.feature  2_authentication.feature  3_endpoints.feature  4_ stripe_subscription_checkout.feature  5_feature_gating.feature  6_customer_portal.feature  SETTINGS.md  StatusWatch_project_sheet.md  audit_issues.md  code-audit-cleanup.md
.github/logs/: CRITICAL_FINDINGS.md  DEPLOYMENT_READY.md  EC2_EXACT_FIXES.md  QUICK_REFERENCE.txt  README_DIAGNOSTICS.md  diagnose_deployment.sh  diagnose_http_redirect.sh  diagnose_https.sh  diagnose_ondemand_tls.sh  diagnose_validation_final.sh  diagnose_wildcard_ssl.sh  diagnostics-login-flow.sh  ec2_auth_diagnostics.sh  final_diagnostics.sh  investigate_structure.sh  preflight_check.sh  quick_https_check.sh  read_auth_debug_logs.sh  run_all_diagnostics.sh  test_auth.sh
.github/workflows/: backend-ci.yml  build-and-push-ghcr.yml  e2e.yml  frontend-ci.yml  publish.yml
backend/: .dockerignore  .env.example  .env.mod  .env.mod.example  Dockerfile  manage.py  manual_cleanup_duplicates.py  pytest.ini  requirements-dev.txt  requirements.txt
backend/api/: admin.py  audit_log.py  auth_service.py  exception_handler.py  exceptions.py  health.py  logging_utils.py  models.py  multi_tenant_auth.py  password_validators.py  performance_log.py  serializers.py  tasks.py  throttles.py  token_refresh.py  urls.py  utils.py  views.py
backend/app/: __init__.py  asgi.py  celery.py  logging_filters.py  middleware.py  middleware_cors_logging.py  middleware_internal.py  middleware_logging.py  middleware_security_custom.py  middleware_tenant_logging.py  settings.py  settings_base.py  settings_development.py  settings_production.py  urls.py  urls_public.py  urls_tenant.py  views.py  wsgi.py
backend/modules/: __init__.py
backend/monitors/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/payments/: billing_urls.py  urls.py  views.py
backend/scripts/: cleanup_test_tenants.py  create_acme_user.py  create_jwt_user.py  fix_dev_database.py  generate_secret_key.py  list_tenants.py
backend/templates/: welcome.html
backend/tenants/: models.py
backend/tests/: conftest.py  test_admin_url.py  test_auth_service.py  test_billing_cancellation.py  test_billing_checkout.py  test_billing_webhooks.py  test_celery_tasks.py  test_ci_smoke.py  test_current_user.py  test_db_user.py  test_django_checks.py  test_duplicate_org_name.py  test_duplicate_org_name_debug.py  test_duplicate_org_name_pytest.py  test_email_verification.py  test_endpoints_api.py  test_exception_handling.py  test_health.py  test_https_enforcement.py  test_imports.py  test_jwt_rotation.py  test_login.py  test_modules_billing_dto.py  test_modules_billing_services.py  test_modules_monitoring_dto.py  test_modules_tenant_auth_service.py  test_modules_tenant_provisioner.py  test_monitoring_scheduler_service.py  (+12 more)
docs/: P1-01-password-complexity.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+127 files in other folders)
